Addedd time to homepage New hover effect Favicon added Added nightmode, autimatic according to time Included toggle for nightmode

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="assets/moon.png">
         <link href="style.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 
@@ -11,12 +12,16 @@
 
     </head>
     <body>
-        <div class="flexCol">
-        <div class="searchbox"><form action="https://www.google.com/search" method="get">
-        <input type="text" name="q" class="search fontAwesome" placeholder="&#xf002;" autocomplete="off">
+        <div class="flexCol" id="fullBack">
+            <div class="rowFlex clockRow">
+                <span class="clock" id="clock"></span>
+    
+            </div>
+            <div class="searchbox"><form action="https://www.google.com/search" method="get">
+        <input type="text" id="searchBox" name="q" class="search fontAwesome" placeholder="&#xf002;" autocomplete="off">
          </form>
         </div>
-         <div class="iconRow">
+         <div class="iconRow rowFlex">
              <div class="iconBox">
                 <a href="https://github.com"><div class="iconContainer"><div class="iconBack" id="hoverRed1"></div><img class="icon"  src="assets/github.svg"/></div></a>
                 <a href="https://spotify.com"><div class="iconContainer"><div class="iconBack" id="hoverRed2"></div><img class="icon" src="assets/spotify.svg"/></div></a>
@@ -27,10 +32,12 @@
 
             </div>
         </div>
+        <div class="toggle rowFlex" onclick="dayNight()"><img src="assets/islam.svg" id="toggleMoon" class="toggleBtn toggleMoon"><img src="assets/sun.svg" id="toggleSun" class="toggleBtn toggleSun"></div>
     </div>
 
 
 
     <script src="https://use.fontawesome.com/cd72f7a24b.js"></script>
+    <script src="script.js"></script>
     </body>
 </html>
