--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             </div>
         </div>
-        <div class="toggle rowFlex" onclick="dayNight()"><img src="assets/islam.svg" id="toggleMoon" class="toggleBtn toggleMoon"><img src="assets/sun.svg" id="toggleSun" class="toggleBtn toggleSun"></div>
+        <div class="toggle rowFlex" onclick="dayNight()"><img src="assets/moon.svg" title="nightmode" id="toggleMoon" class="toggleBtn toggleMoon"><img src="assets/sun.svg" title="Light mode" id="toggleSun" class="toggleBtn toggleSun"></div>
     </div>
 
 
