Improved icon hover flow. Changed font. Fixed search icon. Fixed responsiveness issues.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <link rel="icon" href="assets/moon.png">
         <link href="style.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<!-- Hello World! -->
+            <link href="https://fonts.googleapis.com/css?family=Monda&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="flexCol" id="fullBack">
@@ -18,7 +19,7 @@
     
             </div>
             <div class="searchbox"><form action="https://www.google.com/search" method="get">
-        <input type="text" id="searchBox" name="q" class="search fontAwesome" placeholder="&#xf002;" autocomplete="off">
+        <input type="text" id="searchBox" name="q" class="search fontAwesome" placeholder="&#xf002;" autocomplete="off" onfocus="this.placeholder=''" >
          </form>
         </div>
          <div class="iconRow rowFlex">
