reduced youtube logo contrast in darkmode

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
              <div class="iconBox">
                 <a href="https://github.com"><div class="iconContainer"><div class="iconBack" id="hoverRed1"></div><img class="icon"  src="assets/github.svg"/></div></a>
                 <a href="https://spotify.com"><div class="iconContainer"><div class="iconBack" id="hoverRed2"></div><img class="icon" src="assets/spotify.svg"/></div></a>
-                <a href="https://youtube.com"><div class="iconContainer"><div class="iconBack" id="hoverRed3"></div><img class="icon youtube" src="assets/youtube.svg"/></div></a>
+                <a href="https://youtube.com"><div class="iconContainer"><div class="iconBack" id="hoverRed3"></div><img id="youtube" class="icon youtube" src="assets/youtube.svg"/></div></a>
                 <a href="https://mail.google.com"><div class="iconContainer"><div class="iconBack" id="hoverRed4"></div><img class="icon" src="assets/gmail.svg"/></div></a>
                 <a href="https://twitter.com"><div class="iconContainer"><div class="iconBack" id="hoverRed5"></div><img class="icon" src="assets/twitter.svg"/></div></a>
 
