dark mode animation

--- a/index.html
+++ b/index.html
@@ -1,44 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>My Homepage</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="assets/moon.png">
-        <link href="style.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-            <link href="https://fonts.googleapis.com/css?family=Monda&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <div class="flexCol" id="fullBack">
-            <div class="rowFlex clockRow">
-                <span class="clock" id="clock"></span>
-    
-            </div>
-            <div class="searchbox"><form action="https://www.google.com/search" method="get">
-        <input type="text" id="searchBox" name="q" class="search fontAwesome" placeholder="&#xf002;" autocomplete="off" onfocus="this.placeholder=''" >
-         </form>
+<head>
+    <title>My Homepage</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="assets/moon.png">
+    <link href="style.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Monda&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div id="backPlate"></div>
+    <div class="flexCol" id="fullBack">
+        <div class="rowFlex clockRow">
+            <span class="clock" id="clock"></span>
+
         </div>
-         <div class="iconRow rowFlex">
-             <div class="iconBox">
-                <a href="https://github.com"><div class="iconContainer"><div class="iconBack" id="hoverRed1"></div><img class="icon"  src="assets/github.svg"/></div></a>
-                <a href="https://spotify.com"><div class="iconContainer"><div class="iconBack" id="hoverRed2"></div><img class="icon" src="assets/spotify.svg"/></div></a>
-                <a href="https://youtube.com"><div class="iconContainer"><div class="iconBack" id="hoverRed3"></div><img id="youtube" class="icon youtube" src="assets/youtube.svg"/></div></a>
-                <a href="https://mail.google.com"><div class="iconContainer"><div class="iconBack" id="hoverRed4"></div><img class="icon" src="assets/gmail.svg"/></div></a>
-                <a href="https://twitter.com"><div class="iconContainer"><div class="iconBack" id="hoverRed5"></div><img class="icon" src="assets/twitter.svg"/></div></a>
+        <div class="animationTime searchbox ">
+            <form action="https://www.google.com/search" method="get">
+                <input type="text" id="searchBox" name="q" class="animationTime search fontAwesome" placeholder="&#xf002;"
+                    autocomplete="off" onfocus="this.placeholder=''">
+            </form>
+        </div>
+        <div class="iconRow rowFlex">
+            <div class="iconBox">
+                <a href="https://github.com">
+                    <div class="iconContainer">
+                        <div class="iconBack" id="hoverRed1"></div><img class="icon" src="assets/github.svg" />
+                    </div>
+                </a>
+                <a href="https://spotify.com">
+                    <div class="iconContainer">
+                        <div class="iconBack" id="hoverRed2"></div><img class="icon" src="assets/spotify.svg" />
+                    </div>
+                </a>
+                <a href="https://youtube.com">
+                    <div class="iconContainer">
+                        <div class="iconBack" id="hoverRed3"></div><img id="youtube" class="icon youtube"
+                            src="assets/youtube.svg" />
+                    </div>
+                </a>
+                <a href="https://mail.google.com">
+                    <div class="iconContainer">
+                        <div class="iconBack" id="hoverRed4"></div><img class="icon" src="assets/gmail.svg" />
+                    </div>
+                </a>
+                <a href="https://twitter.com">
+                    <div class="iconContainer">
+                        <div class="iconBack" id="hoverRed5"></div><img class="icon" src="assets/twitter.svg" />
+                    </div>
+                </a>
 
 
             </div>
         </div>
-        <div class="toggle rowFlex" onclick="dayNight()"><img src="assets/moon.svg" title="nightmode" id="toggleMoon" class="toggleBtn toggleMoon"><img src="assets/sun.svg" title="Light mode" id="toggleSun" class="toggleBtn toggleSun"></div>
+        <div class="toggle rowFlex" onclick="dayNight()"><img src="assets/moon.svg" title="nightmode" id="toggleMoon"
+                class="toggleBtn toggleMoon"><img src="assets/sun.svg" title="Light mode" id="toggleSun"
+                class="toggleBtn toggleSun"></div>
     </div>
 
 
 
     <script src="https://use.fontawesome.com/cd72f7a24b.js"></script>
     <script src="script.js"></script>
-    </body>
+</body>
+
 </html>
